--- a/ExamenCiclo8/app/src/main/AndroidManifest.xml
+++ b/ExamenCiclo8/app/src/main/AndroidManifest.xml
@@ -25,8 +25,11 @@
         android:theme="@style/Theme.ExamenCiclo8"
         tools:targetApi="31">
         <activity
+            android:name=".DetallesCuentaActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegistroCuentaActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,12 +38,10 @@
         </activity>
         <activity
             android:name=".ListaCuentasActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
